[gd_scene load_steps=8 format=3 uid="uid://ctw60idsdpm37"]

[ext_resource type="Texture2D" uid="uid://ckdhpreixr1tu" path="res://icons/toggle.png" id="1_2rkah"]
[ext_resource type="Script" path="res://scenes/platform_toggle.gd" id="1_8lcil"]

[sub_resource type="Animation" id="Animation_pvkpd"]
resource_name = "toggle_on"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_qbif2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nuo35"]
resource_name = "toggle_off"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5d5gd"]
_data = {
"RESET": SubResource("Animation_qbif2"),
"toggle_off": SubResource("Animation_nuo35"),
"toggle_on": SubResource("Animation_pvkpd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5qp4"]
size = Vector2(12, 12)

[node name="platform_toggle" type="Node2D"]
script = ExtResource("1_8lcil")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2rkah")
offset = Vector2(1.875, 0)
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_5d5gd")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_c5qp4")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
